Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -177,25 +177,25 @@
 \chapter{Fundamentals}\chlbl{fundamentals}
 \input{tex/fundamentals}
 
-\setchapterpreamble[u]{\margintoc}
-\chapter{Related Work}\chlbl{rel_work}
-\input{tex/related_work}
+%\setchapterpreamble[u]{\margintoc}
+%\chapter{Related Work}\chlbl{rel_work}
+%\input{tex/related_work}
 
-\setchapterpreamble[u]{\margintoc}
-\chapter{Biologically Plausible Vision Framework}\chlbl{probabilistic_framework}
-\input{tex/probabilistic_framework}
+%\setchapterpreamble[u]{\margintoc}
+%\chapter{Biologically Plausible Vision Framework}\chlbl{probabilistic_framework}
+%\input{tex/probabilistic_framework}
 
-\setchapterpreamble[u]{\margintoc}
-\chapter{Experiments}\chlbl{experiments}
-\input{tex/experiments}
+%\setchapterpreamble[u]{\margintoc}
+%\chapter{Experiments}\chlbl{experiments}
+%\input{tex/experiments}
 
-\setchapterpreamble[u]{\margintoc}
-\chapter{Results}\chlbl{results}
-\input{tex/results}
+%\setchapterpreamble[u]{\margintoc}
+%\chapter{Results}\chlbl{results}
+%\input{tex/results}
 
-\setchapterpreamble[u]{\margintoc}
-\chapter{Future Work \& Conclusion}\chlbl{future_work}
-\input{tex/future_work}
+%\setchapterpreamble[u]{\margintoc}
+%\chapter{Future Work \& Conclusion}\chlbl{future_work}
+%\input{tex/future_work}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
