--- a/zotero2.bib
+++ b/zotero2.bib
@@ -1,6 +1,67 @@
 
+@online{wikipedia_neuron_2023,
+	title = {Neuron},
+	url = {https://en.wikipedia.org/wiki/Neuron},
+	author = {{Wikipedia}},
+	urldate = {2023-02-19},
+	date = {2023},
+}
+
+@online{axios_media_inc_artificial_2017,
+	title = {Artificial Intelligence Pioneer Says We Need to Start Over},
+	url = {https://www.axios.com/2017/12/15/artificial-intelligence-pioneer-says-we-need-to-start-over-1513305524},
+	author = {{Axios Media Inc.}},
+	urldate = {2022-09-04},
+	date = {2017},
+}
+
+@thesis{lehmann_leveraging_2022,
+	location = {Winterthur, Switzerland},
+	title = {Leveraging Neuroscience for Deep Learning Based Object Recognition},
+	institution = {Zurich University of Applied Sciences},
+	type = {Master's Thesis},
+	author = {Lehmann, Claude},
+	date = {2022},
+}
+
+@article{bain_mind_1873,
+	title = {Mind and body: The theories of their relation},
+	volume = {19},
+	pages = {582 -- 587},
+	number = {88},
+	journaltitle = {Journal of Mental Science},
+	author = {Bain, Alexander},
+	date = {1873-01},
+	langid = {english},
+}
+
+@book{arathorn_map-seeking_2002,
+	location = {Stanford, {CA}, {USA}},
+	title = {Map-seeking circuits in visual cognition: a computational mechanism for biological and machine vision},
+	isbn = {978-0-8047-4277-1},
+	shorttitle = {Map-seeking circuits in visual cognition},
+	pagetotal = {221},
+	publisher = {Stanford University Press},
+	author = {Arathorn, David W.},
+	date = {2002},
+	langid = {english},
+	keywords = {Cognitive maps (Psychology), Computer vision, Neural circuitry, Vision, Visual cortex},
+}
+
+@book{ackerman_discovering_1992,
+	location = {Washington, {DC}, {USA}},
+	title = {Discovering the brain},
+	isbn = {978-0-309-04529-2},
+	pagetotal = {180},
+	publisher = {National Academy Press},
+	author = {Ackerman, Sandra},
+	date = {1992},
+	langid = {english},
+	keywords = {Brain, Congresses, Neurobiology, Neurology, United States},
+}
+
 @collection{byrne_oxford_2019,
-	location = {New York, {NY}},
+	location = {New York, {NY}, {USA}},
 	title = {The Oxford handbook of invertebrate neurobiology},
 	isbn = {978-0-19-045675-7},
 	pagetotal = {752},
@@ -1544,38 +1605,6 @@ Publisher: Society for Neuroscience},
 	author = {Costandi, Moheb},
 	date = {2016},
 	keywords = {Nervous system, Neural transmission, Neuroplasticity, Physiology},
-}
-
-@book{bain_mind_1873,
-	location = {New York, {NY}, {USA}},
-	title = {Mind and body: The theories of their relation},
-	volume = {1},
-	publisher = {D. Appleton and Company},
-	author = {Bain, Alexander},
-	date = {1873},
-}
-
-@book{arathorn_map-seeking_2002,
-	location = {Stanford, {CA}, {USA}},
-	title = {Map-seeking circuits in visual cognition: a computational mechanism for biological and machine vision},
-	isbn = {978-0-8047-4277-1},
-	shorttitle = {Map-seeking circuits in visual cognition},
-	pagetotal = {221},
-	publisher = {Stanford University Press},
-	author = {Arathorn, David W.},
-	date = {2002},
-	keywords = {Cognitive maps (Psychology), Computer vision, Neural circuitry, Vision, Visual cortex},
-}
-
-@book{ackerman_discovering_1992,
-	location = {Washington, {DC}, {USA}},
-	title = {Discovering the brain},
-	isbn = {978-0-309-04529-2},
-	pagetotal = {180},
-	publisher = {National Academy Press},
-	author = {Ackerman, Sandra},
-	date = {1992},
-	keywords = {Brain, Congresses, Neurobiology, Neurology, United States},
 }
 
 @article{grill-spector_human_2004,
@@ -3435,14 +3464,6 @@ Version Number: 2},
 	urldate = {2023-06-30},
 	date = {1989-09},
 	langid = {english},
-}
-
-@thesis{lehmann_leveraging_2022,
-	title = {Leveraging Neuroscience for Deep Learning Based Object Recognition},
-	institution = {Zurich University of Applied Sciences},
-	type = {Master's Thesis},
-	author = {Lehmann, Claude},
-	date = {2022},
 }
 
 @article{fernandes_self-organization_2015,
