--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -1,46 +1,44 @@
 %% intro.tex
-Deep learning systems have been employed for decades \cite{ivakhnenko_cybernetic_1965} and pervasive influence our daily lives. This technology is utilized in diverse applications, such as machine translation \cite{dabre_survey_2021}, image analysis \cite{bhatt_cnn_2021}, natural language processing \cite{otter_survey_2021}, and speech synthesis \cite{ning_review_2019}, among others. Deep learning methodologies' remarkable success and widespread adoption have revolutionized various industries \cite{bertolini_machine_2021}, enabling enhanced performance and efficiency in numerous tasks and services.
-However, recently ChatGPT \cite{liu_summary_2023} was introduced, marking a pivotal moment in the widespread application of AI systems.
-Since then, AI systems have transcended conventional boundaries and gained widespread applicability. %The emergence of the GPT-4 model \cite{openai_gpt-4_2023} has sparked discussions regarding the potential manifestation of general intelligence \cite{bubeck_sparks_2023}. While some researchers argue in favour of this perspective, I hold a different viewpoint and argue that despite their apparent intelligent behaviour, present AI systems, including ChatGPT, lack the essential characteristics necessary to qualify as true intelligence;
-%These systems are trained to optimize a specific target function, such as predicting the subsequent word token \sidecite{radford_improving_2018}. Thus, these systems rely on statistical patterns rather than genuine understanding. They still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}. Those current learning frameworks might not overcome these limitations, and alternative approaches are necessary (c.f. \secref{limitationsDL}).
-These systems are trained to optimise a specific target function, such as predicting the subsequent word token \sidecite{radford_improving_2018}.
-Thus, such systems rely on statistical patterns rather than genuine understanding and still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}.
-Furthermore, deep networks suffer from various issues of statistical learning such as missing robustness \sidecite{akhtar_threat_2018, long_survey_2022}, catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017}, or requiring huge amounts of data \sidecite{smith_using_2022} (c.f. \secref{limitationsDL}).
+Deep learning systems have been employed for decades \cite{ivakhnenko_cybernetic_1965} and pervasive influence our daily lives. This technology is utilised in diverse applications, such as machine translation \cite{dabre_survey_2021}, image analysis \cite{bhatt_cnn_2021}, natural language processing \cite{otter_survey_2021}, and speech synthesis \cite{ning_review_2019}, among others. Deep learning methodologies' remarkable success and widespread adoption have revolutionised various industries \sidecite{bertolini_machine_2021}, enabling enhanced performance and efficiency in numerous tasks and services.
+Recently ChatGPT \sidecite{liu_summary_2023} was introduced, marking a pivotal moment in the widespread application of AI systems.
+Since then, AI systems have transcended conventional boundaries and gained widespread applicability.
+
+Such AI systems are trained to optimise a specific target function, such as predicting the subsequent word token in the case of language models \sidecite{radford_improving_2018}.
+Therefore, such systems rely on statistical patterns rather than genuine understanding and still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}.
+Furthermore, deep networks suffer from various issues of statistical learning such as missing robustness \sidecite{akhtar_threat_2018, long_survey_2022}, catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017}, or requiring vast amounts of data \sidecite{smith_using_2022} (c.f. \secref{limitationsDL}).
 
 Geoffrey Hinton, recipient of the Turing Award\sidenote{The Turing Award is recognised as the highest academic award in computer science and sometimes also called the ``Nobel Prize of Computing''.} and a prominent figure in the field, is considered one of the pioneers of deep learning.
 His remarkable contributions, including developing deep learning's error correction algorithm called ``backpropagation of error'' (c.f. \secref{ann}), have laid the foundation for today's deep learning systems.
-After more than three decades, Hinton expresses deep scepticism about end-to-end backpropagation of errors and even suggests to ``throw it all away and start again'' to improve current systems fundamentally \cite{axios_hinton}.
+After working over three decades in the field, Hinton expresses deep scepticism about end-to-end backpropagation of errors and even suggests to ``throw it all away and start again'' to improve current systems fundamentally \sidecite{axios_media_inc_artificial_2017}.
 While this view may seem extreme, it shows that the learning algorithm of such systems has significant shortcomings.
 Some of the most critical limitations of deep learning systems are discussed in \secref{limitationsDL}.
 To overcome these challenges, researchers have proposed diverse methods and approaches \cite{long_survey_2022, sager_unsupervised_2022, yarats_improving_2021}. Despite these efforts, progress has been moderate, primarily focusing on mitigating the symptoms rather than addressing the core issues.
 
-This thesis introduces a novel learning framework inspired by neuroscience to address the core issues inherent in deep learning systems. Inspired by the human brain's remarkable learning capabilities, which surpass deep learning's limitations, this research aims to integrate neuroscientific insights into an image-processing framework. It seeks to overcome existing limitations and bridge the gap between artificial and biological intelligence. The thesis draws significant inspiration from the ``Theory of Natural Intelligence'' proposed by \sideciteay{von_der_malsburg_theory_2022} \citeay{von_der_malsburg_theory_2022} \citeauthor*{von_der_malsburg_theory_2022} \citeauthor{von_der_malsburg_theory_2022} and provides a concrete manifestation of the theory within the framework. By anchoring the theoretical concepts in a concrete framework and exemplifying its learning capabilities through practical implementation, this thesis contributes to a comprehensive understanding and application of the principles of the theory.
+This thesis introduces a novel learning framework inspired by neuroscience to address the core issues inherent in deep learning systems. Inspired by the human brain's remarkable learning capabilities, which surpass deep learning's limitations, this research aims to integrate neuroscientific insights into an image-processing framework. It seeks to overcome existing limitations and bridge the gap between artificial and biological intelligence. The thesis draws significant inspiration from the ``Theory of Natural Intelligence'' proposed by \sideciteay{von_der_malsburg_theory_2022} and provides a concrete manifestation of the theory within the framework. By anchoring the theoretical concepts in a concrete framework and exemplifying its learning capabilities through practical implementation, this thesis contributes to a comprehensive understanding and application of the principles of the theory.
 
-
-The motivation for this work arises from a comparative analysis of the properties of the biological visual system and deep networks. The following section highlights significant differences and, in particular, identifies shortcomings within neural networks. These identified deficiencies are addressed in \chref{probabilistic_framework} by proposing an alternative to current image processing networks.
-
+The motivation for this work arises from a comparative analysis of the properties of the biological visual system and deep networks. The following section highlights significant differences and, in particular, identifies shortcomings within neural networks. These identified deficiencies are addressed in \chref{probabilistic_framework} by proposing an alternative approach to current image processing networks.
 
 \section{Motivation}\seclbl{intro_motivation}
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.85\textwidth]{sdp_mountain_spirit.jpg}
+    \includegraphics[width=0.6\textwidth]{sdp_mountain_spirit.jpg}
     \caption[Mountain Spirit in Winter by Sandro del Prete]{Mountain Spirit in Winter by \citeay{del_prete_mountain_1982} demonstrating that humans immediately can observe the overall pattern (a man's face) even though local features depict a painter drawing a house.}
     \figlbl{sdp_mountain}
 \end{figure}
 
-One of the insights from the \emph{Gestalt} psychology \sidecite{ellis_source_1938, kohler_gestalt_1992, wagemans_century_2012, hamlyn_psychology_2017} is that humans are apparently able to recognise the Gestalt of an object within a very short time; The brain can immediately recognise global patterns - arrays of local features that consistently conform to a known large-scale pattern - even if those local features are buried in noise or would, on the basis of local context, be interpreted very differently. Thus, local decisions are made based on plausibility considering overall patterns, while the overall patterns can only be defined based on local features.
+One of the insights from the \emph{Gestalt} psychology \sidecite{ellis_source_1938, kohler_gestalt_1992, wagemans_century_2012, hamlyn_psychology_2017} is that humans are able to recognise the ``Gestalt'' (the entire structure) of an object within a very short time; The brain can immediately recognise global patterns - arrays of local features that consistently conform to a known large-scale pattern - even if those local features are buried in noise or would, on the basis of local context, be interpreted very differently. Thus, local decisions are made based on plausibility considering overall patterns, while the overall patterns can only be defined based on local features.
 
 For example, when looking at \figref{sdp_mountain}, local and global patterns are not aligned. A painter drawing a picture from a house in a snowy landscape can be observed when looking at local features. However, a man's face is visible when looking at the overarching pattern.
 This example illustrates that avoiding the ``fallacy of early commitment'' is important, as David Marr put it \sidecite{marr_vision_2010}.
-Otherwise, when focusing on local features only, systems could commit to objects like trees, a painter, an image, a house, and snow. Such systems would be unable to recognise the global pattern as a men's face typically comprises eyes, nose, etc. and not the aforementioned objects.
+Otherwise, when focusing on local features only, systems would commit to objects like trees, a painter, an image, a house, and snow and be unable to recognise the global pattern as a men's face typically comprises eyes, nose, etc. and not the aforementioned objects.
 
 The theory of natural intelligence \sidecite{von_der_malsburg_theory_2022} and work based on self-organising projection fibres (c.f. \secref{projection_fibres}) considers the principle of preventing early commitment as a core mechanism for the effectiveness of the human visual system.
 Preventing early commitment allows a system to leave multiple options open simultaneously: The system does not take decisions early in the learning process as typical deep learning models do but considers local and global features at the same time, continuously ruling out implausible hypotheses.
 
-The most used architectures for image processing are based on CNNs (c.f. \secref{cnns}). This type of network cannot prevent early commitment by design: The first layers extract local features from images, thereby having access to small patches only. The extracted low-level features are combined into higher-level features in later layers \sidecite{prince_understanding_2023}. Thus, the first layers do not consider global features but steer the decision process during training and inference toward specific directions based on local features. Therefore, CNNs take local decisions without consolidating global information\sidenote{CNNs can be trained to make diverse decisions in high-level layers when appropriate labels are given. However, these decisions are still based on already made local decisions, and such networks cannot deal with ambiguity since the decision process is not based on a two-way iteration.}.
+The most used architectures for image processing are based on convolutional neural networks (CNNs, c.f. \secref{cnns}). This type of network cannot prevent early commitment by design: The first layers extract local features from images, thereby having access to small patches only. The extracted low-level features are combined into higher-level features in later layers \sidecite{prince_understanding_2023}. Thus, the first layers do not consider global features but steer the decision process during training and inference toward specific directions based on local features. Therefore, CNNs take local decisions without consolidating global information\sidenote{CNNs can be trained to make diverse decisions in high-level layers when appropriate labels are given. However, these decisions are still based on already taken local decisions.}.
 
 Transformer-based \sidecite{dosovitskiy_image_2021} or fully connected \sidecite{tolstikhin_mlp-mixer_2021} vision architectures, on the other hand, might not have this design limitation since early layers can access the entire input.
-However, they have a fallacy of early commitment in the sense that they process the input layer-wise. Typically, the input of a vision architecture is specific (e.g. an image) and mapped to more general information (e.g. a class label).
+However, they have a fallacy of early commitment because they process the input layer-wise. Typically, the input of a vision architecture is specific (e.g. an image) and mapped to more general information (e.g. a class label).
 However, general information is not used to confirm or validate specific information and therefore, high-level decisions can be misled by the wrong and inconsistent early decisions.
 Thus, the first layers make decisions on lower-level features and steer the decision process during training and inference towards a specific direction without considering higher-level features, thereby being prone to early commitment as well.
 
@@ -59,26 +57,19 @@ The thesis lies at the intersection of deep learning and neurocomputing\sidenote
 This thesis makes the following contributions:
 \begin{enumerate}
 	\item The basics of deep learning and neurocomputing are described. Together with the related work, this provides a survey of the most important research dealing with alternative learning algorithms.
-	\item The ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} is discussed and put into the context of the theory of self-organising projection fibres \sidecite{wiskott_face_1997, wolfrum_recurrent_2008}.
-    \item Many neuroscientific concepts that are highly relevant for visual object recognition are identified and summarised, and a vocabular compatible with the current deep learning framework is introduced.
-	\item The Bernoulli neuron is introduced, a neuron firing a binary spike based on a learned probability distribution.
-	\item A modernised version of the self-organising projection fibre framework is proposed, particularly focusing on building net fragments in a biological plausible way.
+	\item The ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} is discussed and put into the context of the theory of self-organising projection fibres \sidecite{wiskott_face_1997, wolfrum_recurrent_2008} and the proposed vision framework. I argue that this thesis can be considered a more concrete formulation of this theory.
+    \item Many neuroscientific concepts that are highly relevant for visual object recognition are identified and summarised, and a vocabulary compatible with the current deep learning framework is introduced.
+	\item The Bernoulli neuron is introduced, a neuron firing a binary spike based on a probability distribution.
+	\item A modernised version of the self-organising projection fibre framework is proposed, particularly focusing on building net fragments in a biologically plausible way.
     \item The feasibility of the proposed framework is demonstrated with experiments.
-    \item Directions for future research are given to develop the simplified framework into a complete vision framework.
+    \item Directions for future research are given to improve the proposed vision framework further.
 \end{enumerate}
 
 
 \section{Organisation of Thesis}\seclbl{org_thesis}
 The remainder of the thesis is organised as follows: In \chref{fundamentals}, the fundamentals of deep learning and neurocomputing are explained in detail.
 Experts may skip this chapter; especially the second section on neurocomputing can be omitted, as it is not fundamental for understanding this thesis but only intended for interested readers or those who want to get a better overview of the field or have inspiration for future work.
-\chref{rel_work} introduces the related work. Next, \chref{probabilistic_framework} Identifies the most promising biological concepts for visual object recognition and introduces these principle with a simple vocabular that is compatible with the deep learning framework\sidenote{This is considered an important scientific contribution, which is why this section has not been included in the chapter about related work.}.
-Furthermore, it introduces the concept of the Bernoulli neuron and proposes a novel vision learning framework, thereby putting it into context of existing work, the theory of natural intelligence, and findings from neuroscience.
+\chref{rel_work} introduces the related work. Next, \chref{probabilistic_framework} identifies the most promising biological concepts for visual object recognition and introduces these principles with a vocabulary compatible with the deep learning framework\sidenote{Identifying and explaining neuroscientific findings is considered an important contribution, which is why this section has not been included in the chapter about related work.}.
+Furthermore, it introduces the concept of the Bernoulli neuron and proposes a novel vision learning framework, thereby putting it into the context of the theory of natural intelligence and findings from neuroscience.
 In \chref{experiments}, conducted experiments with the novel framework are described and in \chref{results} the obtained results.
-Finally, \chref{future_work} concludes the thesis by discussing advantages and disadvantages of the proposed learning framework and suggests potential directions for future research.
-
-\section{TODO}
-Feedback Thilo: weniger Small-Scale in Thesis -> mehr Meta-Level in Introduction / eigene Theorie, evtl. Fundamentals -> mehr Neuroscience (1000 Brains, Capsule Networks, Christoph,Geoffrey Generation von Rules)
-
-
-
-
+Finally, \chref{future_work} concludes the thesis by discussing the advantages and disadvantages of the proposed learning framework and suggests potential directions for future research.
